--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ pytest = "^7.4.0"
 emails = "^0.6"
 jinja2 = "^3.1.2"
 pytest-mock = "^3.11.1"
+elasticsearch = "^8.9.0"
+elasticsearch-dsl = "^8.9.0"
 
 
 [build-system]
