--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,49 @@
 version: "3"
 services:
-  elasticsearch:
-    image: elasticsearch:8.8.0
-    ports:
-      - "9200:9200"
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - xpack.security.enrollment.enabled=true
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.2.3
-    ports:
-      - "5601:5601"
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-    depends_on:
-      - elasticsearch
-
-#  db:
-#    image: postgres:14.3
-#    restart: always
+#  elasticsearch:
+#    image: elasticsearch:8.8.0
 #    ports:
-#      - "5432:5432"
-#    volumes:
-#      - $HOME/docker/volumes/postgres/breads:/var/lib/postgresql/data
+#      - "9200:9200"
 #    environment:
-#      - POSTGRES_USER=${DB_USER}
-#      - POSTGRES_PASSWORD=${DB_PASSWORD}
-#      - POSTGRES_DB=${DB_NAME}
-#      - POSTGRES_SERVER=${POSTGRES_SERVER}
+#      - discovery.type=single-node
+#      - xpack.security.enabled=false
+#      - xpack.security.enrollment.enabled=true
 #
-#  app:
-#    build:
-#      dockerfile: Dockerfile
-#      context: .
-#    container_name: app
-#    restart: always
-#    depends_on:
-#      - db
+#  kibana:
+#    image: docker.elastic.co/kibana/kibana:8.2.3
 #    ports:
-#      - "8002:8002"
+#      - "5601:5601"
 #    environment:
-#      - SQLALCHEMY_DATABASE_URI=${SQLALCHEMY_DATABASE_URI}
-#      - JWT_SECRET=${JWT_SECRET}
-#    volumes:
-#      - $HOME/docker/volumes/breads:/var/lib
+#      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+#    depends_on:
+#      - elasticsearch
+
+  db:
+    image: postgres:14.3
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - $HOME/docker/volumes/postgres/breads:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_SERVER=${POSTGRES_SERVER}
+
+  app:
+    build:
+      dockerfile: Dockerfile
+      context: .
+    container_name: app
+    restart: always
+    depends_on:
+      - db
+    ports:
+      - "8002:8002"
+    environment:
+      - SQLALCHEMY_DATABASE_URI=${SQLALCHEMY_DATABASE_URI}
+      - JWT_SECRET=${JWT_SECRET}
+    volumes:
+      - $HOME/docker/volumes/breads:/var/lib
 
