--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ uvicorn = "^0.22.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 tenacity = "^8.2.2"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-pydantic = {version = "1.*", extras = ["email"]}
+pydantic = {extras = ["email"], version = "^2.4.2"}
 python-dotenv = "^1.0.0"
 python-multipart = "^0.0.6"
 httpx = "^0.24.1"
@@ -25,6 +25,7 @@ jinja2 = "^3.1.2"
 pytest-mock = "^3.11.1"
 elasticsearch = "^8.9.0"
 elasticsearch-dsl = "^8.9.0"
+pydantic-settings = "^2.0.3"
 
 
 [build-system]
