--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest-mock = "^3.11.1"
 elasticsearch = "^8.9.0"
 elasticsearch-dsl = "^8.9.0"
 pydantic-settings = "^2.0.3"
+fastapi-pagination = "^0.12.12"
 
 
 [build-system]
