--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ elasticsearch-dsl = "^8.9.0"
 pydantic-settings = "^2.0.3"
 fastapi-pagination = "^0.12.12"
 sqlalchemy-utils = "^0.41.1"
+celery = "^5.3.6"
 
 
 [build-system]
